[package]
name = "ac-editorial"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
easy-scraper = "0.1"
reqwest = { version = "0.10", features = ["gzip"] }
tokio = { version = "0.2", features = ["full"] }