[package]
name = "ac-editorial"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
easy-scraper = "0.1"
reqwest = { version = "0.10", features = ["gzip"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1"